M2T video seeking is broken #87967

Closed
opened 2021-05-01 15:49:56 +02:00 by user1 · 15 comments

System Information
Operating system: Linux-5.4.0-72-generic-x86_64-with-glibc2.27 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.143

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-30 16:49, hash: 5e53504b3b
Worked: 2.93.0

Short description of error
M2T video seeking is broken

Exact steps for others to reproduce the error
footage.m2t

  • Load file to VSE
  • Scrub
**System Information** Operating system: Linux-5.4.0-72-generic-x86_64-with-glibc2.27 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 390.143 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-04-30 16:49, hash: `5e53504b3b` Worked: 2.93.0 **Short description of error** M2T video seeking is broken **Exact steps for others to reproduce the error** [footage.m2t](https://archive.blender.org/developer/F9922694/footage.m2t) - Load file to VSE - Scrub
Author

Added subscriber: @user1

Added subscriber: @user1
Member

Added subscriber: @filedescriptor

Added subscriber: @filedescriptor
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

@user1 Users should only report a single issue per task. Could you please move the second issue to a new report? Thank you.

@user1 Users should only report a single issue per task. Could you please move the second issue to a new report? Thank you.
Author

Could you please help understanding what you consider as 1. issue?

Could you please help understanding what you consider as 1. issue?
Member

Imported sound-track is 101 frames off

This would be one report. We try to keep each report to a single topic only since otherwise things will get too chaotic.

> Imported sound-track is 101 frames off This would be one report. We try to keep each report to a single topic only since otherwise things will get too chaotic.
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

3.0.0 Alpha, branch: master, commit date: 2021-04-30 16:49, hash: 5e53504b3b

Not tested yet. But is this still an issue with recent 3.0.0 build (https://builder.blender.org/download/daily/)?

> 3.0.0 Alpha, branch: master, commit date: 2021-04-30 16:49, hash: 5e53504b3b Not tested yet. But is this still an issue with recent 3.0.0 build (https://builder.blender.org/download/daily/)?

Added subscriber: @iss

Added subscriber: @iss

Imported sound-track is 101 frames off

This is usually caused by videos encoded with variable frame rate. Support for such videos isn't yet implemented, so this isn't a bug

While RAM was set to roughly 6GB (from 8GB), Blender uses 100%RAM and 100%Swap → PC freezes → only solution is power off → that ruined my Virtualbox partition → I lost all my firefox bookmarks and my mail-junk-AI-filter-data

Can not reproduce this issue, but there is some overhead that is beyond our control on FFmpeg side. This depends on encoding and it is possible that it would use 8GB RAM even if you set it to 6GB. Not sure what 100% of swap is in GB.

Without proxies the footage only shows the first frame, in grey and large pixels

I think I can reproduce this issue with following file:
footage.m2t

> Imported sound-track is 101 frames off This is usually caused by videos encoded with variable frame rate. Support for such videos isn't yet implemented, so this isn't a bug > While RAM was set to roughly 6GB (from 8GB), Blender uses 100%RAM and 100%Swap → PC freezes → only solution is power off → that ruined my Virtualbox partition → I lost all my firefox bookmarks and my mail-junk-AI-filter-data Can not reproduce this issue, but there is some overhead that is beyond our control on FFmpeg side. This depends on encoding and it is possible that it would use 8GB RAM even if you set it to 6GB. Not sure what 100% of swap is in GB. >Without proxies the footage only shows the first frame, in grey and large pixels I think I can reproduce this issue with following file: [footage.m2t](https://archive.blender.org/developer/F9922694/footage.m2t)
Richard Antalik changed title from Several issues with VSE to M2T video seeking is broken 2021-07-06 07:24:56 +02:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

@user1 Forgot to mention, that proxies work, but if you want to use 25% size, you must enable it in VSE preview side panel (View > Proxy Render Size). Default is 100%

@user1 Forgot to mention, that proxies work, but if you want to use 25% size, you must enable it in VSE preview side panel (View > Proxy Render Size). Default is 100%

This issue was referenced by e97a2c228e

This issue was referenced by e97a2c228ef546ec96c10d93b94063cba06ca0b8

This issue was referenced by 118946d195

This issue was referenced by 118946d1953fb4e1bfd978d5ecef3151b98880a1

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sebastian Parborg self-assigned this 2021-08-16 15:15:20 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87967
No description provided.